src/main/java/com/github/paohaijiao/parser/JQuickJavaParser.java
// Generated from D:/idea/jthornruleGrammer/QuickJava/JQuickJava.g4 by ANTLR 4.13.2

package com.github.paohaijiao.parser;
import java.util.*;
import com.github.paohaijiao.console.JConsole;
import com.github.paohaijiao.param.JContext;
import com.github.paohaijiao.factory.JQuickJavaFunctionRegistry;
import com.github.paohaijiao.model.JQuickJavaFunctionDefinitionModel;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JQuickJavaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, DOT=13, TYPESHORT=14, TYPENULL=15, THIS=16, 
		CONTINUE=17, BREAK=18, TYPEINT=19, TYPEFLOAT=20, TYPEDOUBLE=21, TYPELONG=22, 
		TYPEBOOLEAN=23, TYPEBYTE=24, IMPORT=25, NEW=26, VAR=27, AS=28, RETURN=29, 
		DEF=30, WHILE=31, FOR=32, ASSIGN=33, SEMICOLON=34, WITH=35, IF=36, THEN=37, 
		ELSEIF=38, ELSE=39, DOLLAR=40, LPAREN=41, RPAREN=42, LBRACE=43, RBRACE=44, 
		GT=45, GE=46, LT=47, LE=48, EQ=49, NE=50, AND=51, OR=52, ADD=53, MINUS=54, 
		MUL=55, DIV=56, CONTAIN=57, BUILTIN=58, NOTCONTAIN=59, START=60, NOTSTART=61, 
		END=62, NOTEND=63, TRUE=64, FALSE=65, COLON=66, NUMBERIC=67, DATETIME=68, 
		DATE=69, YEAR=70, MONTH=71, DAY=72, TIME_ZONE=73, IDENTIFIER=74, STRING=75, 
		SINGLE_LINE_COMMENT=76, MULTI_LINE_COMMENT=77, WS=78, NEWLINE=79;
	public static final int
		RULE_program = 0, RULE_importDeclaration = 1, RULE_paramType = 2, RULE_genericType = 3, 
		RULE_simpleType = 4, RULE_typeArguments = 5, RULE_arrayType = 6, RULE_listType = 7, 
		RULE_setType = 8, RULE_mapType = 9, RULE_qualifiedName = 10, RULE_statement = 11, 
		RULE_method = 12, RULE_action = 13, RULE_controlStatement = 14, RULE_ifStatement = 15, 
		RULE_elseIfConExpression = 16, RULE_elseIfAction = 17, RULE_elseAction = 18, 
		RULE_forStatement = 19, RULE_initExpression = 20, RULE_conExpression = 21, 
		RULE_stopExpression = 22, RULE_whileStatement = 23, RULE_returnStatement = 24, 
		RULE_breakStatement = 25, RULE_continueStatement = 26, RULE_expressionStatement = 27, 
		RULE_variableDecl = 28, RULE_expression = 29, RULE_sout = 30, RULE_logical = 31, 
		RULE_comparison = 32, RULE_additive = 33, RULE_multiplicative = 34, RULE_unary = 35, 
		RULE_functionDefinition = 36, RULE_parameterList = 37, RULE_param = 38, 
		RULE_functionVar = 39, RULE_classsType = 40, RULE_primary = 41, RULE_primaryAtom = 42, 
		RULE_postfix = 43, RULE_argument = 44, RULE_typedArgument = 45, RULE_this = 46, 
		RULE_methodName = 47, RULE_argumentList = 48, RULE_accessStaticVariable = 49, 
		RULE_accessObjectName = 50, RULE_literal = 51, RULE_listLiteral = 52, 
		RULE_mapLiteral = 53, RULE_mapEntry = 54, RULE_importVar = 55, RULE_identifier = 56, 
		RULE_bool = 57, RULE_string = 58, RULE_date = 59, RULE_variables = 60, 
		RULE_number = 61, RULE_null = 62;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importDeclaration", "paramType", "genericType", "simpleType", 
			"typeArguments", "arrayType", "listType", "setType", "mapType", "qualifiedName", 
			"statement", "method", "action", "controlStatement", "ifStatement", "elseIfConExpression", 
			"elseIfAction", "elseAction", "forStatement", "initExpression", "conExpression", 
			"stopExpression", "whileStatement", "returnStatement", "breakStatement", 
			"continueStatement", "expressionStatement", "variableDecl", "expression", 
			"sout", "logical", "comparison", "additive", "multiplicative", "unary", 
			"functionDefinition", "parameterList", "param", "functionVar", "classsType", 
			"primary", "primaryAtom", "postfix", "argument", "typedArgument", "this", 
			"methodName", "argumentList", "accessStaticVariable", "accessObjectName", 
			"literal", "listLiteral", "mapLiteral", "mapEntry", "importVar", "identifier", 
			"bool", "string", "date", "variables", "number", "null"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'['", "']'", "'List'", "'Set'", "'Map'", "'if'", "'else if'", 
			"'else'", "'console.log('", "'@'", "'.class'", "'.'", "'short'", "'null'", 
			"'this'", "'continue'", "'break'", "'int'", "'float'", "'double'", "'long'", 
			"'boolean'", "'byte'", "'import'", "'new'", "'var'", "'as'", "'return'", 
			"'def'", "'while'", "'for'", "'='", "';'", "'WITH'", "'IF'", "'THEN'", 
			"'ELSEIF'", "'ELSE'", "'$'", "'('", "')'", "'{'", "'}'", "'>'", "'>='", 
			"'<'", "'<='", "'=='", "'!='", "'&&'", "'||'", "'+'", "'-'", "'*'", "'/'", 
			"'CONTAIN'", "'Builtin'", "'NOTCONTAIN'", "'START'", "'NOTSTART'", "'END'", 
			"'NOTEND'", "'true'", "'false'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "DOT", "TYPESHORT", "TYPENULL", "THIS", "CONTINUE", "BREAK", "TYPEINT", 
			"TYPEFLOAT", "TYPEDOUBLE", "TYPELONG", "TYPEBOOLEAN", "TYPEBYTE", "IMPORT", 
			"NEW", "VAR", "AS", "RETURN", "DEF", "WHILE", "FOR", "ASSIGN", "SEMICOLON", 
			"WITH", "IF", "THEN", "ELSEIF", "ELSE", "DOLLAR", "LPAREN", "RPAREN", 
			"LBRACE", "RBRACE", "GT", "GE", "LT", "LE", "EQ", "NE", "AND", "OR", 
			"ADD", "MINUS", "MUL", "DIV", "CONTAIN", "BUILTIN", "NOTCONTAIN", "START", 
			"NOTSTART", "END", "NOTEND", "TRUE", "FALSE", "COLON", "NUMBERIC", "DATETIME", 
			"DATE", "YEAR", "MONTH", "DAY", "TIME_ZONE", "IDENTIFIER", "STRING", 
			"SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "WS", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JQuickJava.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	    public static boolean banner=true;

	    public static JConsole console=new JConsole();

	    public static JContext context=new JContext();

	    private Stack<Map<String, Object>> scopes = new Stack<>();

	    public static  JQuickJavaFunctionRegistry registry= JQuickJavaFunctionRegistry.getInstance();


	    public void start(){
	        enterScope(); // 进入全局作用域
	     }
	    public  void init(JContext jContext) {
	    	if(!jContext.isEmpty()){
	    		context.putAll(jContext);
	    	}
	    }
	    public  JContext getJContext() {
	        return this.context;
	    }
	   // 进入新作用域
	   public  void enterScope() {
	        scopes.push(new HashMap<>());
	     }
	   public  void exitScope() {
	        scopes.pop();
	   }
	     // 声明变量
	    public void declareVar(String name, Object value) {
	        if (scopes.isEmpty()) {
	        	enterScope();
	        }
	        Map<String, Object> current = scopes.peek();
	        current.put(name, value);
	    }
	     // 查找变量（从内向外）
	    public Object findVar(String name) {
	    	if(context.containsKey(name)) {
	    		return context.get(name);
	    	}
	        for (int i = scopes.size() - 1; i >= 0; i--) {
	            if (scopes.get(i).containsKey(name)) {
	                return scopes.get(i).get(name);
	            }
	        }
	        console.error("Undefined variable: " + name);
	        return null;
	    }

	      // 赋值变量（从内向外找，找不到就在当前作用域创建）
	    public  void assignVar(String name, Object value) {
	         for (int i = scopes.size() - 1; i >= 0; i--) {
	              if (scopes.get(i).containsKey(name)) {
	                    scopes.get(i).put(name, value);
	                    return;
	               }
	         }
	         // 隐式声明
	         scopes.peek().put(name, value);
	    }
	    public Stack<Map<String, Object>> deepCopyScopeStack() {
	        Stack<Map<String, Object>> newStack = new Stack<>();
	            for (Map<String, Object> scope : scopes) {
	                Map<String, Object> newScope = new HashMap<>();
	                newScope.putAll(scope);
	                newStack.add(newScope);
	            }
	        return newStack;
	    }
	     public Map<String, Object> copyCurrentScope() {
	        Stack<Map<String, Object>> copyStack=deepCopyScopeStack();
	            if (copyStack.isEmpty()) {
	                return new HashMap<>();
	            }
	            return new HashMap<>(copyStack.peek());
	      }
	   public Map<String, Object> copyRuntimeEnvironment() {
	       Stack<Map<String, Object>> copyStack=deepCopyScopeStack();
	            if (copyStack.isEmpty()) {
	                return new HashMap<>();
	            }
	        Map<String, Object> result = new HashMap<>();
	        for (Map<String, Object> scope : copyStack) {
	            result.putAll(scope);
	        }
	        return result;
	   }
	   public void register(JQuickJavaFunctionDefinitionModel define){
	       registry.registerFunction(define);
	   }

	public JQuickJavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JQuickJavaParser.EOF, 0); }
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JQuickJavaListener ) ((JQuickJavaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JQuickJavaListener ) ((JQuickJavaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JQuickJavaVisitor ) return ((JQuickJavaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			start();
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(127);
				importDeclaration();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 315264075623810292L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 3131L) != 0)) {
				{
				{
				setState(133);
				statement();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139);
			match(EOF);
			exitScope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(JQuickJavaParser.IMPORT, 0); }
		public ParamTypeContext paramType() {
			return getRuleContext(ParamTypeContext.class,0);
		}
		public TerminalNode AS() { return getToken(JQuickJavaParser.AS, 0); }
		public ImportVarContext importVar() {
			return getRuleContext(ImportVarContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(JQuickJavaParser.SEMICOLON, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JQuickJavaListener ) ((JQuickJavaListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JQuickJavaListener ) ((JQuickJavaListener)listener).exitImportDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JQuickJavaVisitor ) return ((JQuickJavaVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(IMPORT);
			setState(143);
			paramType();
			setState(144);
			match(AS);
			setState(145);
			importVar();
			setState(146);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamTypeContext extends ParserRuleContext {
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public GenericTypeContext genericType() {
			return getRuleContext(GenericTypeContext.class,0);
		}
		public ListTypeContext listType() {
			return getRuleContext(ListTypeContext.class,0);
		}
		public MapTypeContext mapType() {
			return getRuleContext(MapTypeContext.class,0);
		}
		public SetTypeContext setType() {
			return getRuleContext(SetTypeContext.class,0);
		}
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public ParamTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JQuickJavaListener ) ((JQuickJavaListener)listener).enterParamType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JQuickJavaListener ) ((JQuickJavaListener)listener).exitParamType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JQuickJavaVisitor ) return ((JQuickJavaVisitor<? extends T>)visitor).visitParamType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamTypeContext paramType() throws RecognitionException {
		ParamTypeContext _localctx = new ParamTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_paramType);
		try {
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				simpleType();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				genericType();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(150);
				listType();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(151);
				mapType();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(152);
				setType();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(153);
				arrayType();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GenericTypeContext extends ParserRuleContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TypeArgumentsContext typeArguments() {
			return getRuleContext(TypeArgumentsContext.class,0);
		}
		public GenericTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JQuickJavaListener ) ((JQuickJavaListener)listener).enterGenericType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JQuickJavaListener ) ((JQuickJavaListener)listener).exitGenericType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JQuickJavaVisitor ) return ((JQuickJavaVisitor<? extends T>)visitor).visitGenericType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GenericTypeContext genericType() throws RecognitionException {
		GenericTypeContext _localctx = new GenericTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_genericType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			qualifiedName();
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LT) {
				{
				setState(157);
				typeArguments();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleTypeContext extends ParserRuleContext {
		public TerminalNode TYPESHORT() { return getToken(JQuickJavaParser.TYPESHORT, 0); }
		public TerminalNode TYPEINT() { return getToken(JQuickJavaParser.TYPEINT, 0); }
		public TerminalNode TYPEFLOAT() { return getToken(JQuickJavaParser.TYPEFLOAT, 0); }
		public TerminalNode TYPEDOUBLE() { return getToken(JQuickJavaParser.TYPEDOUBLE, 0); }
		public TerminalNode TYPELONG() { return getToken(JQuickJavaParser.TYPELONG, 0); }
		public TerminalNode TYPEBOOLEAN() { return getToken(JQuickJavaParser.TYPEBOOLEAN, 0); }
		public TerminalNode TYPEBYTE() { return getToken(JQuickJavaParser.TYPEBYTE, 0); }
		public SimpleTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JQuickJavaListener ) ((JQuickJavaListener)listener).enterSimpleType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JQuickJavaListener ) ((JQuickJavaListener)listener).exitSimpleType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JQuickJavaVisitor ) return ((JQuickJavaVisitor<? extends T>)visitor).visitSimpleType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleTypeContext simpleType() throws RecognitionException {
		SimpleTypeContext _localctx = new SimpleTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_simpleType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 33046528L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
